[2단계 - 성능 테스트] 리뷰 요청드립니다. (#60)
* chore: k6 테스트용 소스코드

* docs: 부하 테스트 결과 업데이트